deploy/services/svc-identity/service-identity-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-identity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-identity
  template:
    metadata:
      labels:
        app: service-identity
    spec:
      automountServiceAccountToken: false  # Disable automounting service account token
      containers:
      - name: service-identity
        image: immerslve/service.identity
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"  # CPU limit for the container
            memory: "512Mi"  # Memory limit for the container (adjust as needed)
