deploy/services/svc-identity/service-identity-k8s-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-identity
spec:
  selector:
    app: service-identity
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
