deploy/services/svc-identity/service-identity-k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-identity-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - '*.cdjb.uk'
    secretName: wildcard-tls
  rules:
  - host: 'id.cdjb.uk'
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-identity
            port:
              number: 8080
